--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "set PORT=3006 && react-scripts start",
+    "dev": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
